28/3/24:
-Reworked and optimized entity references, NodeIDs removed

21/3/24:
-Tracy profiler integration
-Optimizations to MeshInstanceGroups, tombstone transforms now used to avoid frequent re-allocations
-Optimizations to entity deserialization and prefab instantiation

19/3/24:
-EntityNodeRefs can now reference a path shared by multiple entities (same name, parent etc) but retain uniqueness using new entity NodeIDs
-EntityNodeRef bugfixes, now stable when duplicating entities
-Editor joint tooling improved
-Crash/stability fixes

18/3/24:
-Large rewrite of joint components, joint components now support any number of joints with tracked references for quick access
-Joint editor tools, joint maker and joint transform editor with gizmos
-EntityNodeRefs can now reference entities not related to eachother through parent/child relationships
-Some editor code restructuring

16/3/24:
-Physx D6 joint components with debug rendering, editor integration and serialization
-EntityNodeRef's that can be used for relatively referencing entities from paths
-Improved SceneSerializer performance and cleaned up code

9/3/24:
-Voxel GI cascade improvements, interpolation between cascade borders for smoother transitions, reuse of cascade data for smaller cascade updates,
full cascade stabilization that's fixed flickering
-Voxel GI luminance now accumulates over frames for smoother lighting on dynamic objects and less obvious voxel snapping
-Proper character controller integration (serialization, editor, debug capsule rendering)
-Updated README

3/3/24:
-Voxel GI bugfixing/debug code cleanup and cascades almost fully implemented
-More scripting utilities (exposed physx api, get entity by name)
-General refactoring/bugfixing

01/3/24:
-Started work on multiple voxel GI cascades to extend GI range
-Depth passes now account for transparency in materials (binary opacity only)
-More material parameters (disable backface culling)
-Some small tessellation tweaks

20/2/24: